# realestate-com-au-api

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
realestate_com_au/: __init__.py  realestate_com_au.py
realestate_com_au/graphql/: searchByQuery.py  searchRent.py  searchSold.py
realestate_com_au/objects/: listing.py
realestate_com_au/utils/: __init__.py
tests/: test_realestate_com_au.py
